* fix if no templates are found
* fix if the dead file is empty
* fix for recent versions of MPI (if dead times used)
* fix if dead times are not sorted or overlapping
* add the auto_cluster param in [data] to force gobal_tmp if needed
* fix when no cluster are found on some electrodes
* fix in the MATLAB Gui if no spikes are found
* support for the maxwell file format (MaxOne and MaxTwo)

=============
Release 0.9.9
=============

* fix for shanks (because of optimization in 0.9.8)
* fix for clusters (if global tmp is not created)
* fix for recent versions of MPI (shared memory issues)
* still speeding up the fitting procedure, as a final bottleneck
* fix in the smart search and chunks exploration

=============
Release 0.9.8
=============

* fix a bug while filtering HDF5 file with overwrite set to False
* fix a bug for windows and Intel MPI
* speeding up the fitting procedure
* reducing the memory footprint while optimizing amplitudes for large number of templates
* changing the way of saving overlaps, making use of internal symmetry. Lot of memory saved

=============
Release 0.9.7
=============

* fix a bug in the preview mode
* fix a bug while converting with export_all set to True
* fix a rare bug when both peaks are detect in clustering with smart search
* fix a bug if removing reference channel after filtering has been already done
* fix a bug while converting with export_all
* fix a bug in the filtering introduced in 0.9.6 (last chunk not filtered)
* fix a possible bug in smart search with dynamic bins
* enhance the robustness of the whitening for very large arrays
* speeding up the fitting procedure
* enhancing the non-selection of noisy snippets, and thus clustering
* option to dynamically adapt cc_merge for large number of electrodes
* remove putative mixtures based on variance, speeding up drastically CC estimation

=============
Release 0.9.6
=============

* fixes in the smart search (not all rare cases were covered in 0.9.5)